main/public/stylesheets/style.css
/* ... */
#feedContent{ clear: both; padding-top: 12px; background: white; border-radius: 5px 5px 5px 5px; box-shadow: 0 1px 0 #DDDDDD; margin-top: 20px; padding-right: 12px; margin-left: 12px;}
#feedContent .item{margin:5px;}
#feedContent .title{font-size:0.85em;font-weight:bold;cursor:default;}
#feedContent .title a { color: #4A4A4A;}
#feedContent .title a:hover { color: #D71921;}
#feedContent .content{font-size:0.6em;}
#feedContent .address{font-size:11px;font-style:italic; position: relative; clear: both; width: auto; float: right; right: 12px;}
#feedContent .yakLikes{font-size:11px;font-style:italic; position: relative; clear: both; width: auto; float: left; left: 12px; top: 12px; color: #D71920;}
#feedContent .yakComments{font-size:11px;font-style:italic; position: relative; clear: both; width: auto; float: left; left: 12px; top: 12px; color: #D71920; cursor: pointer;}
#feedContent .commentBox .aComment { clear:  both;}
#feedContent .commentBox {font-style:italic; position: relative; clear: both; width: auto; float: left; left: 12px; top: 12px; color: #D71920; cursor: pointer; background: #F1F2F6; width: 98%; margin-bottom: 30px;}
#feedContent .commentBox .username { color: #3B5998; cursor: pointer;}
#feedContent .commentBox .username:hover { text-decoration: underline;}
#feedContent .commentBox .userthumb { height: 100px; width: 100px; float: left; }
#feedContent .commentBox .comment { color: black; margin-bottom: 12px;}
#feedContent .commentBox textarea { width: 40%; height: 100px; margin-top: 12px; margin-left: 12px;}

#feedContent .shareMe { text-align: right; margin-top: -27px; position: relative; right: 10px; width: 100%;} 
#feedContent .shareMe i {cursor: pointer; position: relative; right: 95px;}
#feedContent .img { float: left; margin-right: 12px;}
#feedContent .myitem { margin: 10px 10px 10px 10px; color: #4A4A4A; width: 99%; border-bottom: 1px dotted #000000; min-height: 200px; }
#feedContent .myitem .title { font-size: 14px; font-weight: bold; padding-bottom: 10px;}
#feedContent .myitem .title .postedby { font-size: 12px; font-style: italic; font-weight: normal; color: #87888B; margin-top: 5px;}
#feedContent .myitem .title .postedat { font-size: 11px; }
#feedContent .myitem .title .more { display: block; width: 75%; }
#feedContent .myitem .title .timeago { float: right; margin: 0px 8px 0px 0px;}
#feedContent .myitem .title .hot { width: 200px; background: #cecece; height: 8px; clear: both; left: 40px; position: relative;; top: -3px;}
#feedContent .myitem .title .hot .hotLevel{ background: #D71921;  height: 8px;}
#feedContent .myitem  .content { font-size: 13px; line-height: 18px; z-index: 11}
#feedContent .myitem  .content .more { float: right;}
#feedContent .myitem .title .yakImg { float: right; padding-right: 10px;margin: 0px 8px 0px 0px; }
#feedContent .myitem .title .PersonImg { float: left; padding-right: 10px;width:25px; }
#feedContent .myitem .freetags { clear: both; float: left;margin:10px;}
#feedContent .myitem .freetags a { color: #DC1227; font-size: 13px; margin-right: 10px;cursor:pointer;}
#feedContent .myitem .phoneNumbers { clear: both; position: relative; margin-top: 12px; left: 0px;}
#feedContent .myitem .phoneNumbers a { color: #3CB413; font-size: 12px; margin-right: 10px; position: relative; top: -4px; left: -9px;}
#feedContent .myitem .loadingMore { height: 18px; position: absolute; left: 101px;}  
#feedContent .silentUpdates { text-align: center; background: #D71921; margin-left: 9px; color: white; padding-bottom: 6px; padding-top: 6px; font-weight: bold; cursor: pointer;}
.expand { z-index: 1111};
#search #heatModule { text-align: center;}
#search #heatModule .upperHeight { height: 5px; margin-top: 9px;}
.dayPrinter { margin-top: 0px; text-align: right;}
.paging { width: 100%; text-align: center; background: #F4F4F4; padding-bottom: 10px; padding-top: 10px;}
.sets {width: 100%; text-align: center; background: #292929; padding-bottom: 10px; padding-top: 10px; color: white; visibility: hidden;}


#newsLoader { text-align: right; float: right; background: #D71921; color: white; font-weight: bold; cursor: pointer; visibility: hidden;}
.graybg { background: #E8E8E8;}
.theslider { width: 200px;}

.typeaheadImg { height: 25px; float: left;}
.ftgIcon { height: 14px; position: relative; top: 2px;}
#topsFeed { margin: 0px 10px 0px -20px; background: white; border: 1px solid #cecece; float: right; overflow: hidden;  border-radius: 5px 5px 5px 5px; box-shadow: 0 1px 0 #DDDDDD;}
#topsFeed .myitem { margin:  12px; border-bottom: 1px dotted #cecece; background: white;}
#topsFeed .myitem:even { background-color:  white;}
#topsFeed .postedby {font-size:9px;font-style:italic; right: 10px; top: 0px; position: relative; clear: both; text-align: right;}
#topsFeed .title{font-size:0.85em;font-weight:bold;}
#topsFeed .title a { color: #4A4A4A;}
#topsFeed .title a:hover { color: #D71921;}
#topsFeed .myitem .title .PersonImg { float: left; padding-right: 10px; height: 25px;}
#topsFeed .content{font-size:11px; margin-top: 11px;}
#topsFeed .myitem .freetags { clear: both; position: relative; top: 0px; left: 0px; font-size: 11px;}
#topsFeed .myitem .freetags a { color: #D81A21; font-size: 11px; margin-right: 10px;}

.localnessPrinter {position: relative; top: -13px; left: 209px;}
/* THE MAP
-------------------------------------------------- */
	/*MAP TOOLS CONTROLLERS*/

#zoomnavigation {background-image: url(/images/styles.png);background-position: -112px -639px;bottom: 50px;height: 113px;margin-left: 0px;position: absolute;width: 65px;z-index: 200;}
#zoomminus {background-image: url(/images/styles.png);background-position: -50px -866px;bottom: 25px;cursor: pointer;cursor: hand;display: block;height: 35px;margin-left: 11px;margin-top: 17px;width: 37px;z-index: 200;}
#zoomplus {background-image: url(/images/styles.png);background-position: -45px -814px;bottom: 25px;display: block;height: 35px;margin-left: 11px;margin-top: 10px;width: 37px;z-index: 200;cursor: pointer;cursor: hand;}
/* ... */

